@@ -88,7 +88,6 @@ void ShapeBrowser::browse_shapes()
 		int centery = maxy/2;
 		Palette pal;
 		char buf[255];
-		str_int_pair pal_tuple, patch_tuple, xform_tuple;
 		const char *fname;
 		
 		snprintf(buf,255,"files/shapes/%d",current_file);
@@ -104,15 +103,15 @@ void ShapeBrowser::browse_shapes()
 			if (redraw) {
 				gwin->clear_screen();
 				snprintf(buf,255,"palettes/%d", current_palette);
-				pal_tuple = game->get_resource(buf);
+				const str_int_pair& pal_tuple = game->get_resource(buf);
 				snprintf(buf,255,"palettes/patch/%d", current_palette);
-				patch_tuple = game->get_resource(buf);
+				const str_int_pair& patch_tuple = game->get_resource(buf);
 				char xfrsc[256];
 				if (current_xform > 0)
 					{
 					snprintf(xfrsc, 255, "xforms/%d",
 							current_xform);
-					xform_tuple = game->
+					const str_int_pair& xform_tuple = game->
 						get_resource(xfrsc);
 					pal.load(pal_tuple.str, patch_tuple.str,
 						pal_tuple.num, xform_tuple.str, xform_tuple.num);
