@@ -1573,7 +1573,7 @@ bool BG_Game::new_game(Vga_file &shapes)
 	std::vector<std::pair<std::string, int> > source;
 	source.push_back(std::pair<std::string, int>(FACES_VGA, -1));
 	// Multiracial faces.
-	str_int_pair resource = game->get_resource("files/mrfacesvga");
+	const str_int_pair& resource = game->get_resource("files/mrfacesvga");
 	source.push_back(std::pair<std::string, int>(resource.str, resource.num));
 	source.push_back(std::pair<std::string, int>(PATCH_FACES, -1));
 	faces_vga.load(source);
