@@ -1286,10 +1286,6 @@
 						>
 					</File>
 					<File
-						RelativePath="..\files\multifile.h"
-						>
-					</File>
-					<File
 						RelativePath="..\files\Table.h"
 						>
 					</File>
@@ -2534,11 +2530,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\README"
+				RelativePath="..\conf\README"
 				>
 			</File>
 			<File
-				RelativePath="..\conf\README"
+				RelativePath="..\README"
 				>
 			</File>
 			<File
