@@ -1330,7 +1330,7 @@ DataSource *Vga_file::U7load
 	else
 		{
 		// It is a resource.
-		U7object vgaobj(resource.first.c_str(), resource.second);
+		U7object vgaobj(File_spec(resource.first), resource.second);
 		std::size_t len;
 		try
 			{
